--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "node --loader ts-node/esm"
+    "ts": "ts-node"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
