--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ts": "node --loader ts-node/esm"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/node": "18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -30,5 +31,8 @@
   "engines": {
     "node": "^18.0.0",
     "npm": ">=8"
+  },
+  "dependencies": {
+    "chalk": "^5.6.2"
   }
 }
