--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "node --loader ts-node/esm"
+    "ts": "node --loader ts-node/esm",
+    "mock:server": "json-server --watch mocks/mock-server-data.json --port 3123"
   },
   "devDependencies": {
     "@types/chalk": "^0.4.31",
