--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "mock:server": "json-server --watch mocks/mock-server-data.json --port 3123"
   },
   "devDependencies": {
+    "@types/chalk": "0.4.31",
     "@types/convict": "6.1.4",
     "@types/convict-format-with-validator": "6.0.3",
-    "@types/chalk": "0.4.31",
     "@types/node": "18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -31,7 +31,7 @@
     "pino-pretty": "10.2.0",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
-    "tslib" : "2.6.2",
+    "tslib": "2.6.2",
     "typescript": "5.2.2"
   },
   "type": "module",
@@ -40,14 +40,14 @@
     "npm": ">=8"
   },
   "dependencies": {
+    "chalk": "5.6.2",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
-    "chalk": "5.6.2",
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "got": "13.0.0",
     "inversify": "6.0.1",
     "pino": "8.15.1",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "^0.1.13"
   }
 }
