--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "node --loader ts-node/esm",
+    "ts": "node --loader ts-node/esm --experimental-specifier-resolution=node",
     "mock:server": "json-server --watch mocks/mock-server-data.json --port 3123"
   },
   "devDependencies": {
@@ -50,6 +50,6 @@
     "inversify": "6.0.1",
     "mongoose": "7.5.3",
     "pino": "8.15.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.14"
   }
 }
