--- a/src/specification/project.spec.yml
+++ b/src/specification/project.spec.yml
@@ -1,8 +1,8 @@
 openapi: 3.1.0
 info:
-  title: API сервер для демо-проекта «6 городов».
+  title: API сервер для демо-проекта «Шесть городов».
   description: |-
-    * Список ресурсов и маршрутов сервера «6 городов».
+    * Список ресурсов и маршрутов сервера «Шесть городов».
   license:
     name: MIT
     url: https://opensource.org/licenses/MIT
