--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "got": "13.0.0",
     "http-status-codes": "^2.3.0",
     "inversify": "6.0.1",
+    "joi": "18.0.2",
     "mongoose": "7.5.3",
     "pino": "8.15.1",
     "reflect-metadata": "^0.1.14"
